Initial GPX support, experimental 3-d plotting, bugfixes, oh myg
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@20 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -38,7 +38,9 @@ viking_SOURCES = main.c \
 	googlemaps.c googlemaps.h \
 	gtkcellrendererprogress.c gtkcellrendererprogress.h \
 	khmaps.c khmaps.h \
-	usgs.c usgs.h
+	usgs.c usgs.h \
+        gpx.c gpx.h
 
 INCLUDES        = @GTK_CFLAGS@
 LDADD           = @GTK_LIBS@
+CFLAGS		= -Wall -g
