--- a/src/Makefile_GTK_2_2
+++ b/src/Makefile_GTK_2_2
@@ -7,7 +7,7 @@ EXE = .exe
 endif
 
 TARGET=viking$(EXE)
-OBJECTS=gtkcolorbutton.o viktrack.o vikwaypoint.o clipboard.o coords.o gpsmapper.o gpspoint.o file.o main.o dialog.o http.o viktreeview.o viktrwlayer.o viklayer.o viklayerspanel.o vikcoordlayer.o vikstatus.o vikwindow.o vikviewport.o vikaggregatelayer.o vikgeoreflayer.o vikfileentry.o viktrwlayer_tpwin.o viktrwlayer_propwin.o thumbnails.o background.o vikradiogroup.o vikcoord.o expedia.o mapcache.o vikmapslayer.o terraserver.o googlemaps.o gtkcellrendererprogress.o
+OBJECTS=gtkcolorbutton.o viktrack.o vikwaypoint.o clipboard.o coords.o gpsmapper.o gpspoint.o file.o main.o dialog.o http.o viktreeview.o viktrwlayer.o viklayer.o viklayerspanel.o vikcoordlayer.o vikstatus.o vikwindow.o vikviewport.o vikaggregatelayer.o vikgeoreflayer.o vikfileentry.o viktrwlayer_tpwin.o viktrwlayer_propwin.o thumbnails.o background.o vikradiogroup.o vikcoord.o expedia.o mapcache.o vikmapslayer.o terraserver.o googlemaps.o gtkcellrendererprogress.o gpx.o
 
 CCFLAGS = -DGTK_2_2 -Wall -g
 LINKFLAGS =
