Substitution of CFLAGS by AM_CFLAGS
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@32 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,4 +43,4 @@ viking_SOURCES = main.c \
 
 INCLUDES        = @GTK_CFLAGS@
 LDADD           = @GTK_LIBS@
-CFLAGS		= -Wall -g
+AM_CFLAGS		= -Wall -g
