More wp icons added
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@60 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/icons/Makefile.am
+++ b/src/icons/Makefile.am
@@ -6,7 +6,18 @@ WAYPOINT_ICONS = \
   wp_geocache.png \
   wp_geocache_fnd.png \
   wp_house.png \
-  wp_wpt_dot.png
+  wp_wpt_dot.png \
+  wp_dollar.png \
+  wp_golf.png \
+  wp_summit.png \
+  wp_anchor.png \
+  wp_forest.png \
+  wp_parking.png \
+  wp_sml_cty.png \
+  wp_med_cty.png \
+  wp_lrg_cty.png \
+  wp_cap_cty.png 
+
 
 ICONS = \
   addtr_18.png \
