Alex's GPSBabel acquire code
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@88 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -42,7 +42,9 @@ viking_SOURCES = main.c \
 	gtkcellrendererprogress.c gtkcellrendererprogress.h \
 	khmaps.c khmaps.h \
         gpx.c gpx.h \
-	garminsymbols.c garminsymbols.h
+	garminsymbols.c garminsymbols.h \
+	acquire.c acquire.h \
+	babel.c babel.h
 
 INCLUDES        = @GTK_CFLAGS@
 LDADD           = @GTK_LIBS@
