Data sources core structure, google directions
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@95 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -44,7 +44,10 @@ viking_SOURCES = main.c \
         gpx.c gpx.h \
 	garminsymbols.c garminsymbols.h \
 	acquire.c acquire.h \
-	babel.c babel.h
+	babel.c babel.h \
+	datasource_gps.c \
+	datasource_google.c \
+	datasources.h
 
 INCLUDES        = @GTK_CFLAGS@
 LDADD           = @GTK_LIBS@
