Geocaching.com (via gcget) data source
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@98 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -47,6 +47,7 @@ viking_SOURCES = main.c \
 	babel.c babel.h \
 	datasource_gps.c \
 	datasource_google.c \
+	datasource_gc.c \
 	datasources.h
 
 INCLUDES        = @GTK_CFLAGS@
