Adding degrees conversion functions (DDD/DMM/DMS)
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@109 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/configure.ac
+++ b/configure.ac
@@ -66,6 +66,7 @@ AC_DEFINE_UNQUOTED(VIK_CONFIG_MAPCACHE_SIZE, ${VIK_CONFIG_MAPCACHE_SIZE},
 AC_CONFIG_FILES([Makefile
                  src/Makefile
                  src/icons/Makefile
+                 test/Makefile
                  doc/Makefile
                  doc/dev/Makefile])
 AC_OUTPUT
