toolbox tool improvements
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@116 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/icons/Makefile.am
+++ b/src/icons/Makefile.am
@@ -46,3 +46,5 @@ icons.h: $(ALL_ICONS:%.png=%.png_h)
 
 .png.png_h:
 	gdk-pixbuf-csource --name="`basename $< .png`" --struct $< > $@
+	cat $@ | sed -e 's/\(pixel_data: ..\)/\1 (unsigned char \*)/' > temp.h
+	mv temp.h $@
