Improve Makefile for a "make distcheck" support
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@117 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -6,6 +6,8 @@ TESTS = check_degrees_conversions.sh
 check_PROGRAMS = degrees_converter
 
 check_SCRIPTS = check_degrees_conversions.sh
+
+EXTRA_DIST = check_degrees_conversions.sh
 	          
 degrees_converter_SOURCES = degrees_converter.c
 degrees_converter_LDADD = \
