Map Layers now register themselves to vikmapslayer
git-svn-id: https://guyou@viking.svn.sourceforge.net/svnroot/viking/branches/modular@152 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -6,6 +6,7 @@ SUBDIRS = icons
 bin_PROGRAMS = viking
 
 viking_SOURCES = main.c \
+	modules.h modules.c \
 	menu.xml.h \
     degrees_converters.c degrees_converters.h \
 	viking.h globals.h mapcoord.h config.h \
