Add ability to disable Terraserver stuff
git-svn-id: https://guyou@viking.svn.sourceforge.net/svnroot/viking/branches/modular@160 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -39,7 +39,6 @@ viking_SOURCES = main.c \
 	expedia.c expedia.h \
 	mapcache.c mapcache.h \
 	vikmapslayer.c vikmapslayer.h vikmapslayer_pixmap.h \
-	terraserver.c terraserver.h \
 	gtkcellrendererprogress.c gtkcellrendererprogress.h \
 	khmaps.c khmaps.h \
         gpx.c gpx.h \
@@ -55,6 +54,11 @@ if GOOGLE
 viking_SOURCES += \
 	google.c google.h \
 	googlemaps.c googlemaps.h
+endif
+
+if TERRASERVER
+viking_SOURCES += \
+	terraserver.c terraserver.h
 endif
 
 INCLUDES        = @GTK_CFLAGS@ @EXPAT_CFLAGS@
