Add ability to disable Expedia stuff
git-svn-id: https://guyou@viking.svn.sourceforge.net/svnroot/viking/branches/modular@161 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -36,7 +36,6 @@ viking_SOURCES = main.c \
 	background.c background.h \
 	vikradiogroup.c vikradiogroup.h \
 	vikcoord.c vikcoord.h \
-	expedia.c expedia.h \
 	mapcache.c mapcache.h \
 	vikmapslayer.c vikmapslayer.h vikmapslayer_pixmap.h \
 	gtkcellrendererprogress.c gtkcellrendererprogress.h \
@@ -59,6 +58,11 @@ endif
 if TERRASERVER
 viking_SOURCES += \
 	terraserver.c terraserver.h
+endif
+
+if EXPEDIA
+viking_SOURCES += \
+	expedia.c expedia.h
 endif
 
 INCLUDES        = @GTK_CFLAGS@ @EXPAT_CFLAGS@
