Added viking.spec.in (by Michael A Peters). Made autoconf be aware of the new file
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@195 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,4 +2,9 @@ SUBDIRS = src test doc
 
 bin_SCRIPTS = viking-remote
 
-EXTRA_DIST = viking-remote
+EXTRA_DIST = \
+	     viking-remote \
+	     viking.spec
+
+dist-hook: viking.spec
+	cp $(top_builddir)/viking.spec $(distdir)
