Introducing download module
Used for indirections between simple http module and curl module.


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@202 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -28,6 +28,7 @@ viking_SOURCES = main.c \
 	authors.h \
 	dialog.c dialog.h \
 	http.c http.h \
+	download.c download.h \
 	viktreeview.c viktreeview.h \
 	viktrwlayer.c viktrwlayer.h viktrwlayer_pixmap.h \
 	viklayer.c viklayer.h \
