New module for OpenStreetMap sources.
Extract slippy maps code from google.c and create a new module.
This one inserts two map sources: Osmarender and Mapnik.


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@208 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,6 +83,10 @@ viking_SOURCES += \
 	expedia.c expedia.h
 endif
 
+viking_SOURCES += \
+	osm.c osm.h
+
+
 INCLUDES        = @GTK_CFLAGS@ @EXPAT_CFLAGS@ @LIBCURL_CPPFLAGS@
 LDADD           = @GTK_LIBS@ @EXPAT_LIBS@ @LIBCURL@
 AM_CFLAGS		= -Wall -g
