Allows to enable/disable OpenStreetMap module
git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@210 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -83,8 +83,10 @@ viking_SOURCES += \
 	expedia.c expedia.h
 endif
 
+if OPENSTREETMAP
 viking_SOURCES += \
 	osm.c osm.h
+endif
 
 
 INCLUDES        = @GTK_CFLAGS@ @EXPAT_CFLAGS@ @LIBCURL_CPPFLAGS@
