Adding man pages
Signed-off-by: Ralf Meyer <ranfyy@gmail.com>


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@259 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/debian/rules
+++ b/debian/rules
@@ -90,7 +90,7 @@ binary-arch: build install
 #	dh_installinit
 #	dh_installcron
 #	dh_installinfo
-	dh_installman
+	dh_installman debian/viking.1 debian/viking-remote.1
 	dh_link
 	dh_strip
 	dh_compress
