Removing generated files
Signed-off-by: Guilhem Bonnefille <guilhem.bonnefille@gmail.com>


git-svn-id: https://svn.sourceforge.net/svnroot/viking/trunk@260 02d69b8e-d120-0410-893f-fe71a3b6e39e

--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: viking
 Section: unknown
 Priority: extra
 Maintainer: Guilhem BONNEFILLE <guilhem.bonnefille@gmail.com>
-Build-Depends: debhelper (>= 5), autotools-dev
+Build-Depends: debhelper (>= 5), autotools-dev, docbook-to-man
 Standards-Version: 3.7.2
 
 Package: viking
